Avoid wrapping author name in site intro

--- a/des/main.css
+++ b/des/main.css
@@ -333,6 +333,10 @@ img.figure {
   margin: 0 auto;
 }
 
+.site-intro [rel='author'] {
+  white-space: nowrap;
+}
+
 @media only screen and (min-width: 35em) {
   .site-intro,
   .post-footer-nav {
